// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/search-filters snapshots filter story matches snapshot 1`] = `
<div
  className="sc-AxjAm StDqN"
>
  <div
    className="ant-select ant-select-multiple ant-select-show-search"
    onBlur={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    style={
      Object {
        "width": "100%",
      }
    }
  >
    <div
      className="ant-select-selector"
      onMouseDown={[Function]}
    >
      <span
        onMouseDown={[Function]}
      >
        <span
          className="ant-tag"
          style={
            Object {
              "backgroundColor": undefined,
            }
          }
        >
          <span
            aria-label="code"
            className="anticon anticon-code"
            role="img"
          >
            <svg
              aria-hidden="true"
              className=""
              data-icon="code"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M516 673c0 4.4 3.4 8 7.5 8h185c4.1 0 7.5-3.6 7.5-8v-48c0-4.4-3.4-8-7.5-8h-185c-4.1 0-7.5 3.6-7.5 8v48zm-194.9 6.1l192-161c3.8-3.2 3.8-9.1 0-12.3l-192-160.9A7.95 7.95 0 00308 351v62.7c0 2.4 1 4.6 2.9 6.1L420.7 512l-109.8 92.2a8.1 8.1 0 00-2.9 6.1V673c0 6.8 7.9 10.5 13.1 6.1zM880 112H144c-17.7 0-32 14.3-32 32v736c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V144c0-17.7-14.3-32-32-32zm-40 728H184V184h656v656z"
              />
            </svg>
          </span>
           
          TypeScript
          <span
            aria-label="close"
            className="anticon anticon-close ant-tag-close-icon"
            onClick={[Function]}
            role="img"
            tabIndex={-1}
          >
            <svg
              aria-hidden="true"
              className=""
              data-icon="close"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 00203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
              />
            </svg>
          </span>
        </span>
      </span>
      <span
        className="ant-select-selection-search"
        style={
          Object {
            "width": 0,
          }
        }
      >
        <input
          aria-activedescendant="undefined_list_0"
          aria-autocomplete="list"
          aria-controls="undefined_list"
          aria-haspopup="listbox"
          aria-owns="undefined_list"
          autoComplete="off"
          className="ant-select-selection-search-input"
          disabled={false}
          onChange={[Function]}
          onCompositionEnd={[Function]}
          onCompositionStart={[Function]}
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          onPaste={[Function]}
          readOnly={true}
          role="combobox"
          style={
            Object {
              "opacity": 0,
            }
          }
          unselectable="on"
          value=""
        />
        <span
          aria-hidden={true}
          className="ant-select-selection-search-mirror"
        >
          
           
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`components/search-filters snapshots filters story matches snapshot 1`] = `
<div
  className="sc-AxjAm StDqN"
>
  <div
    className="ant-select ant-select-multiple ant-select-show-search"
    onBlur={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    style={
      Object {
        "width": "100%",
      }
    }
  >
    <div
      className="ant-select-selector"
      onMouseDown={[Function]}
    >
      <span
        onMouseDown={[Function]}
      >
        <span
          className="ant-tag"
          style={
            Object {
              "backgroundColor": undefined,
            }
          }
        >
          <span
            aria-label="code"
            className="anticon anticon-code"
            role="img"
          >
            <svg
              aria-hidden="true"
              className=""
              data-icon="code"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M516 673c0 4.4 3.4 8 7.5 8h185c4.1 0 7.5-3.6 7.5-8v-48c0-4.4-3.4-8-7.5-8h-185c-4.1 0-7.5 3.6-7.5 8v48zm-194.9 6.1l192-161c3.8-3.2 3.8-9.1 0-12.3l-192-160.9A7.95 7.95 0 00308 351v62.7c0 2.4 1 4.6 2.9 6.1L420.7 512l-109.8 92.2a8.1 8.1 0 00-2.9 6.1V673c0 6.8 7.9 10.5 13.1 6.1zM880 112H144c-17.7 0-32 14.3-32 32v736c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V144c0-17.7-14.3-32-32-32zm-40 728H184V184h656v656z"
              />
            </svg>
          </span>
           
          TypeScript
          <span
            aria-label="close"
            className="anticon anticon-close ant-tag-close-icon"
            onClick={[Function]}
            role="img"
            tabIndex={-1}
          >
            <svg
              aria-hidden="true"
              className=""
              data-icon="close"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 00203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
              />
            </svg>
          </span>
        </span>
      </span>
      <span
        onMouseDown={[Function]}
      >
        <span
          className="ant-tag"
          style={
            Object {
              "backgroundColor": undefined,
            }
          }
        >
          <span
            aria-label="code"
            className="anticon anticon-code"
            role="img"
          >
            <svg
              aria-hidden="true"
              className=""
              data-icon="code"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M516 673c0 4.4 3.4 8 7.5 8h185c4.1 0 7.5-3.6 7.5-8v-48c0-4.4-3.4-8-7.5-8h-185c-4.1 0-7.5 3.6-7.5 8v48zm-194.9 6.1l192-161c3.8-3.2 3.8-9.1 0-12.3l-192-160.9A7.95 7.95 0 00308 351v62.7c0 2.4 1 4.6 2.9 6.1L420.7 512l-109.8 92.2a8.1 8.1 0 00-2.9 6.1V673c0 6.8 7.9 10.5 13.1 6.1zM880 112H144c-17.7 0-32 14.3-32 32v736c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V144c0-17.7-14.3-32-32-32zm-40 728H184V184h656v656z"
              />
            </svg>
          </span>
           
          JavaScript
          <span
            aria-label="close"
            className="anticon anticon-close ant-tag-close-icon"
            onClick={[Function]}
            role="img"
            tabIndex={-1}
          >
            <svg
              aria-hidden="true"
              className=""
              data-icon="close"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 00203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
              />
            </svg>
          </span>
        </span>
      </span>
      <span
        className="ant-select-selection-search"
        style={
          Object {
            "width": 0,
          }
        }
      >
        <input
          aria-activedescendant="rc_select_TEST_OR_SSR_list_0"
          aria-autocomplete="list"
          aria-controls="rc_select_TEST_OR_SSR_list"
          aria-haspopup="listbox"
          aria-owns="rc_select_TEST_OR_SSR_list"
          autoComplete="off"
          className="ant-select-selection-search-input"
          disabled={false}
          id="rc_select_TEST_OR_SSR"
          onChange={[Function]}
          onCompositionEnd={[Function]}
          onCompositionStart={[Function]}
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          onPaste={[Function]}
          readOnly={true}
          role="combobox"
          style={
            Object {
              "opacity": 0,
            }
          }
          unselectable="on"
          value=""
        />
        <span
          aria-hidden={true}
          className="ant-select-selection-search-mirror"
        >
          
           
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`components/search-filters snapshots loading story matches snapshot 1`] = `
<div
  className="sc-AxjAm StDqN"
>
  <div
    className="ant-select ant-select-multiple ant-select-disabled ant-select-show-search"
    onBlur={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    style={
      Object {
        "width": "100%",
      }
    }
  >
    <div
      className="ant-select-selector"
      onMouseDown={[Function]}
    >
      <span
        className="ant-select-selection-search"
        style={
          Object {
            "width": 0,
          }
        }
      >
        <input
          aria-activedescendant="rc_select_TEST_OR_SSR_list_0"
          aria-autocomplete="list"
          aria-controls="rc_select_TEST_OR_SSR_list"
          aria-expanded={false}
          aria-haspopup="listbox"
          aria-owns="rc_select_TEST_OR_SSR_list"
          autoComplete="off"
          className="ant-select-selection-search-input"
          disabled={true}
          id="rc_select_TEST_OR_SSR"
          onChange={[Function]}
          onCompositionEnd={[Function]}
          onCompositionStart={[Function]}
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          onPaste={[Function]}
          readOnly={true}
          role="combobox"
          style={
            Object {
              "opacity": 0,
            }
          }
          unselectable="on"
          value=""
        />
        <span
          aria-hidden={true}
          className="ant-select-selection-search-mirror"
        >
          
           
        </span>
      </span>
      <span
        className="ant-select-selection-placeholder"
      >
        <span
          aria-label="code"
          className="anticon anticon-code"
          role="img"
        >
          <svg
            aria-hidden="true"
            className=""
            data-icon="code"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M516 673c0 4.4 3.4 8 7.5 8h185c4.1 0 7.5-3.6 7.5-8v-48c0-4.4-3.4-8-7.5-8h-185c-4.1 0-7.5 3.6-7.5 8v48zm-194.9 6.1l192-161c3.8-3.2 3.8-9.1 0-12.3l-192-160.9A7.95 7.95 0 00308 351v62.7c0 2.4 1 4.6 2.9 6.1L420.7 512l-109.8 92.2a8.1 8.1 0 00-2.9 6.1V673c0 6.8 7.9 10.5 13.1 6.1zM880 112H144c-17.7 0-32 14.3-32 32v736c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V144c0-17.7-14.3-32-32-32zm-40 728H184V184h656v656z"
            />
          </svg>
        </span>
         language
      </span>
    </div>
  </div>
</div>
`;

exports[`components/search-filters snapshots sample story matches snapshot 1`] = `
<div
  className="sc-AxjAm StDqN"
>
  <div
    className="ant-select ant-select-multiple ant-select-show-search"
    onBlur={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    style={
      Object {
        "width": "100%",
      }
    }
  >
    <div
      className="ant-select-selector"
      onMouseDown={[Function]}
    >
      <span
        className="ant-select-selection-search"
        style={
          Object {
            "width": 0,
          }
        }
      >
        <input
          aria-activedescendant="undefined_list_0"
          aria-autocomplete="list"
          aria-controls="undefined_list"
          aria-haspopup="listbox"
          aria-owns="undefined_list"
          autoComplete="off"
          className="ant-select-selection-search-input"
          disabled={false}
          onChange={[Function]}
          onCompositionEnd={[Function]}
          onCompositionStart={[Function]}
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          onPaste={[Function]}
          readOnly={true}
          role="combobox"
          style={
            Object {
              "opacity": 0,
            }
          }
          unselectable="on"
          value=""
        />
        <span
          aria-hidden={true}
          className="ant-select-selection-search-mirror"
        >
          
           
        </span>
      </span>
      <span
        className="ant-select-selection-placeholder"
      >
        <span
          aria-label="code"
          className="anticon anticon-code"
          role="img"
        >
          <svg
            aria-hidden="true"
            className=""
            data-icon="code"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M516 673c0 4.4 3.4 8 7.5 8h185c4.1 0 7.5-3.6 7.5-8v-48c0-4.4-3.4-8-7.5-8h-185c-4.1 0-7.5 3.6-7.5 8v48zm-194.9 6.1l192-161c3.8-3.2 3.8-9.1 0-12.3l-192-160.9A7.95 7.95 0 00308 351v62.7c0 2.4 1 4.6 2.9 6.1L420.7 512l-109.8 92.2a8.1 8.1 0 00-2.9 6.1V673c0 6.8 7.9 10.5 13.1 6.1zM880 112H144c-17.7 0-32 14.3-32 32v736c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V144c0-17.7-14.3-32-32-32zm-40 728H184V184h656v656z"
            />
          </svg>
        </span>
         language
      </span>
    </div>
  </div>
</div>
`;
